# Enrico_Repository_PCS

./: prova040326.txt
esercitazione1/: CMakeLists.txt  Esercizio_1.cpp
esercitazione10/: CMakeLists.txt  gc_mio.cpp
esercitazione2/: CMakeLists.txt  esercizio1.cpp  esercizio2.cpp  esercizio2_1.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rationalv1.hpp
esercitazione4/: CMakeLists.txt  main.cpp  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  completamento_es_5.docx  is_sorted.hpp  main.cpp  sorts.hpp  test_mergesort.cpp  test_quicksort.cpp
esercitazione8/: CMakeLists.txt  unidirected_edge.h  unidirected_graph.cpp
esercitazione9/: CMakeLists.txt  fifo_lifo.h  graph.h  main.cpp
